# setup-environment-AldanaPavet

./: .gitignore  CMakeLists.txt  Doxifile
.github/actions/building/: action.yml
.github/actions/coverage_and_test/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
include/: logic.h
lib/libdyn/: CMakeLists.txt
lib/libdyn/src/: shared.c
lib/libsta/: CMakeLists.txt
lib/libsta/src/: static.c
src/: greetings.c  logic.c  main.c
tests/: CMakeLists.txt
tests/unit/: test_unit_program.c
